@@ -1,5 +1,7 @@
 0.10.4 (unreleased, may change version number)
 ------
+* Export pprof info over HTTP, but only accept connections from localhost for
+  that information.
 * Add statsd metrics for things like chef-client run timings (requires
   reporting) and started/succeeded/failed, number of nodes, API endpoint 
   timings, various pieces of runtime info like GC pauses, RAM used, and number
